# pyimgtag

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  docs.yml  pr-tests.yml  publish.yml  python-package.yml  release.yml  sanitize-pr-description.yml
docs/: platform-setup.md  record-demo.sh
examples/: 01_basic_run.sh  02_date_range_export.sh  03_photos_library.sh  04_linux_windows.sh  05_query_and_review.sh  06_cleanup_candidates.sh  07_tag_management.sh  08_faces_workflow.sh  09_raw_heic.sh  10_dedup_and_reprocess.sh  11_judge_subcommand.sh  README.md  capture_demo.py  mock_ollama.py
examples/captured/: cleanup.txt  cleanup_review.txt  faces_scan.txt  output_json.txt  preflight.txt  query_filters.txt  query_table.txt  reprocess.txt  run_dedup.txt  run_dry_run.txt  run_real.txt  status.txt  tags_list.txt  tags_list_after_rename.txt  tags_rename.txt
examples/fixtures/: create_fixtures.py
scripts/: test-smoke-local.sh  test_faces_e2e.sh  test_faces_import_photos.sh  test_faces_ui.sh
src/pyimgtag/: __init__.py  __main__.py  _face_dep_check.py  _face_model_cache.py  applescript_writer.py  cache.py  cleanup_drift.py  cloud_clients.py  dedup.py  exif_reader.py  exif_writer.py  face_clustering.py  face_detection.py  face_embedding.py  face_naming.py  face_ocr.py  face_thumb.py  faces_review_server.py  filters.py  geocoder.py  heic_converter.py  judge_scorer.py  main.py  models.py  ollama_client.py  output_writer.py  photos_faces_importer.py  preflight.py  progress_db.py  raw_converter.py  review_server.py  run_registry.py  run_session.py  scanner.py  update_check.py
src/pyimgtag/commands/: __init__.py  cleanup_drift.py  db.py  faces.py  judge.py  preflight_cmd.py  query.py  review_cmd.py  run.py  tags.py
src/pyimgtag/db/: __init__.py  face_db.py  image_db.py  judge_db.py  progress_db.py
src/pyimgtag/face/: __init__.py  clustering.py  detection.py  embedding.py  naming.py  ocr.py  photos_importer.py  thumb.py
src/pyimgtag/webapp/: __init__.py  __main__.py  bootstrap.py  config.py  dashboard_server.py  nav.py  routes_about.py  routes_edit.py  routes_faces.py  routes_judge.py  routes_query.py  routes_review.py  routes_tags.py  server_thread.py  templating.py  unified_app.py
src/pyimgtag/webapp/templates/: dashboard.html  edit.html  faces.html  faces_person.html  judge.html  review.html
tests/: conftest.py  test__face_dep_check.py  test_applescript_writer.py  test_cache.py  test_cli_args_matrix.py  test_cloud_clients.py  test_cmd_judge.py  test_commands_cleanup_drift.py  test_commands_faces.py  test_commands_faces_session.py  test_commands_judge.py  test_commands_judge_session.py  test_commands_preflight_cmd.py  test_commands_review_cmd.py  test_commands_run.py  test_dashboard_import_fallbacks.py  test_dashboard_server.py  test_dedup.py  test_delete_safety.py  test_exif_reader.py  test_exif_writer.py  test_face_clustering.py  test_face_detection.py  test_face_embedding.py  test_face_model_cache.py  test_face_naming.py  test_face_ocr.py  test_face_thumb.py  test_faces_review_server.py  test_faces_ui_command.py  test_filters.py  test_geocoder.py  test_heic_converter.py  test_judge_scorer.py  test_main.py  test_main_modules.py  test_mock_ollama.py  test_mock_ollama_example.py  test_models.py  test_nav.py  (+25 more)
tests/e2e/: .gitignore  conftest.py  test_faces.py  test_smoke.py
tests/local/: .gitignore  README.md  conftest.py  test_webapp_screenshots.py
wiki/: Home.md
