[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyimgtag"
version = "0.13.2"
description = "Tag macOS Photos library images using local Gemma model for searchable tags"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{ name = "pyimgtag contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: MacOS",
    "Intended Audience :: End Users/Desktop",
]
dependencies = [
    "requests>=2.28",
    "Pillow>=10.0",
    "imagehash>=4.3.1",
    "exifread>=3.0",
]

[project.optional-dependencies]
heic = ["pillow-heif>=0.10.0"]
photos = ["photoscript>=0.5.3"]
# IMPORTANT: face_recognition_models is a runtime dependency of
# face-recognition that is NOT published to PyPI — it only exists at the
# upstream git URL https://github.com/ageitgey/face_recognition_models.
# We can NOT list it here, even in extras: PyPI rejects published packages
# whose core metadata declares direct-URL dependencies (returns
# `400 Can't have direct dependency …`). Users have to install it
# themselves after installing pyimgtag from PyPI:
#
#     pip install 'pyimgtag[face]'
#     pip install "face_recognition_models @ git+https://github.com/ageitgey/face_recognition_models"
#
# The pre-flight check in src/pyimgtag/_face_dep_check.py prints this
# command (with `sys.executable -m pip install …`) when the models
# package is missing, so the user always gets an actionable next step.
# `setuptools` is kept here so `from pkg_resources import …` (used by
# face_recognition_models at import time) doesn't trip on Python 3.12+,
# which no longer bundles setuptools by default. Capped at <81 because
# setuptools 81.0.0 removed the bundled ``pkg_resources`` module — a
# fresh install of setuptools 81+ has the package metadata but
# ``import pkg_resources`` raises ``ModuleNotFoundError``, which
# breaks face_recognition_models at import time.
face = [
    "face-recognition>=1.3",
    "setuptools>=68.0,<81",
    "scikit-learn>=1.3",
]
review = ["fastapi>=0.100", "uvicorn>=0.20", "pydantic>=2.0", "httpx>=0.24"]
raw = ["rawpy>=0.18"]
all = [
    "pillow-heif>=0.10.0",
    "photoscript>=0.5.3",
    # See note above on [face]: face_recognition_models cannot be listed
    # here either; it is installed separately from a git URL.
    "face-recognition>=1.3",
    # Cap at <81 — setuptools 81 removed the bundled ``pkg_resources``
    # module that face_recognition_models still imports at load time.
    "setuptools>=68.0,<81",
    "scikit-learn>=1.3",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
    "httpx>=0.24",
    "rawpy>=0.18",
]
dev = ["pytest>=9.0", "pytest-xdist>=3.0", "pytest-cov>=4.0"]
lint = ["mypy>=1.0", "ruff>=0.1.0"]
security = ["bandit>=1.7", "pip-audit>=2.6"]
# Optional: install Playwright + Pillow for the local screenshot smoke
# under tests/local/. After `pip install '.[screenshot]'` run
# `playwright install chromium` once to fetch the browser binary.
screenshot = ["playwright>=1.40", "Pillow>=10.0"]
# End-to-end Playwright smoke (tests/e2e/) used by both the local
# `scripts/test-smoke-local.sh` runner and the `pr-tests` GH workflow.
# After `pip install '.[e2e]'` run `playwright install chromium` once.
e2e = [
    "playwright>=1.40",
    "pytest-playwright>=0.4",
    "requests>=2.31",
]

[project.scripts]
pyimgtag = "pyimgtag.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Two test directories are kept out of the default run:
# - tests/local/ — Playwright screenshot smoke; writes PNGs locally.
# - tests/e2e/   — Playwright smoke that needs the dashboard already
#                  running (started by scripts/test-smoke-local.sh
#                  locally or .github/workflows/pr-tests.yml in CI).
# Invoke either explicitly with `--override-ini='addopts='`.
addopts = "-n auto --dist=worksteal --ignore=tests/local --ignore=tests/e2e"

[tool.coverage.run]
branch = false
source = ["src/pyimgtag"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[tool.bandit]
skips = ["B404", "B603", "B607"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/pyimgtag/review_server.py" = ["E501"]  # HTML/CSS template has long lines
"src/pyimgtag/faces_review_server.py" = ["E501"]
"src/pyimgtag/webapp/routes_review.py" = ["E501"]  # HTML/CSS template has long lines
"src/pyimgtag/webapp/routes_faces.py" = ["E501"]  # HTML/CSS template has long lines
