[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyimgtag"
version = "0.23.0"
description = "Tag macOS Photos library images using local Gemma model for searchable tags"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{ name = "pyimgtag contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: MacOS",
    "Intended Audience :: End Users/Desktop",
]
dependencies = [
    "requests>=2.34",
    "Pillow>=12.0",
    "imagehash>=4.3.2",
    "exifread>=3.5",
]

[project.optional-dependencies]
heic = ["pillow-heif>=1.3"]
photos = ["photoscript>=0.5.3"]
# IMPORTANT: face_recognition_models is a runtime dependency of
# face-recognition that is NOT published to PyPI — it only exists at the
# upstream git URL https://github.com/ageitgey/face_recognition_models.
# We can NOT list it here, even in extras: PyPI rejects published packages
# whose core metadata declares direct-URL dependencies (returns
# `400 Can't have direct dependency …`). Users have to install it
# themselves after installing pyimgtag from PyPI:
#
#     pip install 'pyimgtag[face]'
#     pip install "face_recognition_models @ git+https://github.com/ageitgey/face_recognition_models"
#
# The pre-flight check in src/pyimgtag/_face_dep_check.py prints this
# command (with `sys.executable -m pip install …`) when the models
# package is missing, so the user always gets an actionable next step.
# `setuptools` is kept here so `from pkg_resources import …` (used by
# face_recognition_models at import time) doesn't trip on Python 3.12+,
# which no longer bundles setuptools by default. Capped at <81 because
# setuptools 81.0.0 removed the bundled ``pkg_resources`` module — a
# fresh install of setuptools 81+ has the package metadata but
# ``import pkg_resources`` raises ``ModuleNotFoundError``, which
# breaks face_recognition_models at import time.
face = [
    "face-recognition>=1.3",
    "setuptools>=68.0,<81",
    "scikit-learn>=1.8",
]
review = ["fastapi>=0.136", "uvicorn>=0.48", "pydantic>=2.13", "httpx2>=2.2"]
raw = ["rawpy>=0.27"]
all = [
    "pillow-heif>=1.3",
    "photoscript>=0.5.3",
    # See note above on [face]: face_recognition_models cannot be listed
    # here either; it is installed separately from a git URL.
    "face-recognition>=1.3",
    # Cap at <81 — setuptools 81 removed the bundled ``pkg_resources``
    # module that face_recognition_models still imports at load time.
    "setuptools>=68.0,<81",
    "scikit-learn>=1.8",
    "fastapi>=0.136",
    "uvicorn>=0.48",
    "pydantic>=2.13",
    "httpx2>=2.2",
    "rawpy>=0.27",
]
dev = ["pytest>=9.0", "pytest-xdist>=3.8", "pytest-cov>=7.0"]
lint = ["mypy>=2.1", "ruff>=0.15"]
security = ["bandit>=1.9", "pip-audit>=2.10"]
# Optional: install Playwright + Pillow for the local screenshot smoke
# under tests/local/. After `pip install '.[screenshot]'` run
# `playwright install chromium` once to fetch the browser binary.
screenshot = ["playwright>=1.60", "Pillow>=12.0"]
# End-to-end Playwright smoke (tests/e2e/) used by both the local
# `scripts/test-smoke-local.sh` runner and the `pr-tests` GH workflow.
# After `pip install '.[e2e]'` run `playwright install chromium` once.
e2e = [
    "playwright>=1.60",
    "pytest-playwright>=0.8",
    "requests>=2.34",
]

[project.scripts]
pyimgtag = "pyimgtag.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Two test directories are kept out of the default run:
# - tests/local/ — Playwright screenshot smoke; writes PNGs locally.
# - tests/e2e/   — Playwright smoke that needs the dashboard already
#                  running (started by scripts/test-smoke-local.sh
#                  locally or .github/workflows/pr-tests.yml in CI).
# Invoke either explicitly with `--override-ini='addopts='`.
addopts = "-n auto --dist=worksteal --ignore=tests/local --ignore=tests/e2e"

[tool.coverage.run]
branch = false
source = ["src/pyimgtag"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[tool.bandit]
skips = ["B404", "B603", "B607"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/pyimgtag/review_server.py" = ["E501"]  # HTML/CSS template has long lines
"src/pyimgtag/faces_review_server.py" = ["E501"]
"src/pyimgtag/webapp/routes_review.py" = ["E501"]  # HTML/CSS template has long lines
"src/pyimgtag/webapp/routes_faces.py" = ["E501"]  # HTML/CSS template has long lines
"src/pyimgtag/webapp/dashboard_server.py" = ["E501"]  # HTML/CSS/JS template has long lines
# Tests that guard optional dependencies with pytest.importorskip() must
# place the dependent imports after the skip call (E402).
"tests/test_dashboard_server.py" = ["E402"]
"tests/test_server_thread.py" = ["E402"]
"tests/test_routes_judge.py" = ["E402"]
"tests/test_routes_tags.py" = ["E402"]
"tests/test_unified_app.py" = ["E402"]
"tests/test_routes_faces.py" = ["E402"]
"tests/test_review_server.py" = ["E402"]
"tests/test_face_clustering.py" = ["E402"]
"tests/test_routes_query.py" = ["E402"]
"tests/test_routes_review.py" = ["E402"]
